--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h3 class="descInfo">De</h3>
             <div class="custom-select" id="selectMoeda">
                 <div class="selected-option" onclick="toggleOptions()">
-                    <span class="selected-text">Dólar</span> 
+                    <span class="selected-text">Real</span> 
                     <span class="chevron"><img src="./chevron-down.svg" alt="seta"></span>
                   </div>
                 <div class="options-container">
@@ -60,7 +60,7 @@
             <h3 class="descInfo">Para</h3>
                 <div class="custom-select" id="selectMoedaPara">
                     <div class="selected-option-para" onclick="toggleOptions()">
-                        <span class="selected-text">Real</span> 
+                        <span class="selected-text">Dólar</span> 
                         <span class="chevron"><img src="./chevron-down.svg" alt="seta"></span>
                       </div>
                     <div class="options-container">
@@ -70,6 +70,9 @@
                   </div>
               <div class="valorDigitar">
                 <input type="text" id="valorFinalConvetido" value="6.00">
+            </div>
+            <div class="btn btnpara">
+                <button id="btnConverterFinal">Conveter</button>
             </div>
         </div>
         </div>
